@@ -10,7 +10,7 @@ then
    export MAX_PERMGEN_SIZE="192m"
 fi
 
-export ANT_OPTS="-XX:PermSize=${INITIAL_PERMGEN_SIZE} -XX:MaxPermSize=${MAX_PERMGEN_SIZE}  $*"
+export ANT_OPTS="-XX:MetaspaceSize=${INITIAL_PERMGEN_SIZE} -XX:MaxMetaspaceSize=${MAX_PERMGEN_SIZE}  $*"
 ant
 
 sudo rsync -rugl tmp/test-reports/html/* root@awipscm:/var/www/html/junit
